# claude-rotate

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: install.sh
src/claude_rotate/: __init__.py  __main__.py  account_config_dir.py  accounts.py  cli.py  config.py  credentials_file.py  dashboard.py  errors.py  exec.py  hook_cli.py  insights.py  login.py  metadata.py  oauth.py  probe.py  refresh.py  refresh_policy.py  report.py  selection.py  session_guard.py  sessions.py  settings.py  state_log.py  sync.py  usage_cache.py
src/claude_rotate/commands/: cleanup.py  config.py  disable.py  doctor.py  heartbeat.py  hook.py  install_hooks.py  install_skill.py  install_sync.py  list_cmd.py  login.py  pin.py  remove.py  rename.py  run.py  (+3 more)
tests/: conftest.py  test_account_config_dir.py  test_accounts.py  test_cli_smoke.py  test_cmd_account_mgmt.py  test_cmd_cleanup.py  test_cmd_config.py  test_cmd_disable.py  test_cmd_heartbeat.py  test_cmd_hook.py  test_cmd_install_hooks.py  test_cmd_install_skill.py  test_cmd_install_sync.py  test_cmd_pin.py  test_cmd_run.py  test_cmd_set_expiry.py  test_cmd_status_doctor.py  test_cmd_sync_credentials.py  test_config.py  test_credentials_file.py  test_dashboard.py  test_exec.py  test_forecast_recency.py  test_login.py  test_metadata.py  test_oauth.py  test_package.py  test_probe_http.py  test_probe_parser.py  test_refresh.py  test_refresh_policy.py  test_report.py  test_selection.py  test_session_guard.py  test_sessions.py  test_settings.py  test_state_log.py  test_sync.py  test_usage_cache.py
tests/fixtures/: accounts_v1.json  accounts_v2.json  accounts_v3.json  accounts_v4.json  accounts_v5.json  accounts_v6.json  accounts_v7.json  accounts_v8.json  credentials_full_scope.json  credentials_inference_only.json  headers_ok.json  usage_max20.json
(+1 files in other folders)
