[project]
name = "claude-rotate"
version = "0.1.0"
description = "Quota-aware account rotator for Claude Code subscriptions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["claude", "claude-code", "anthropic", "oauth", "rotator", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.7",
    "platformdirs>=4.0",
]

[project.urls]
Homepage = "https://github.com/codename-cn/claude-rotate"
Issues   = "https://github.com/codename-cn/claude-rotate/issues"

[project.scripts]
claude-rotate = "claude_rotate.cli:main"

# PEP 735 dependency groups. ``uv sync --dev`` installs this group in CI
# and for local development. The older ``[project.optional-dependencies]``
# form stopped being recognised by ``uv sync --dev`` in uv ≥ 0.5.
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.9",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_rotate"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
files = ["src/claude_rotate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
